--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -16,8 +16,27 @@
                 margin: 25px 200px;
                 text-align:center;}
         </style>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </head>
 <body>
+
+    <!-- Creating the Navigation Bar-->
+    <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+              <div class="navbar-header">
+                <a class="navbar-brand" href="#">Latitude & Weather</a>
+              </div>
+              <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#">Page 1</a></li>
+                    <li><a href="#">Page 2</a></li>
+                    <li><a href="#">Page 3</a></li>
+                  </ul>
+            </div>
+    </nav>
+
     <h1>How does weather change with latitude and longitude? </h1>
         <br>
     <p id=lighter>
@@ -30,7 +49,7 @@
         <br>
    
     <p id=tree>
-        Please check the links below to see our different visuals and explore our site
+        Please check the links above to see our different visuals and explore our site
     </p>   
 </body>
 
