--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -30,12 +30,18 @@
               </div>
               <ul class="nav navbar-nav">
                     <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">Page 1</a></li>
-                    <li><a href="#">Page 2</a></li>
-                    <li><a href="#">Page 3</a></li>
+                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Visualizations <span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="#">Max Temperature</a></li>
+                        <li><a href="#">Humidity</a></li>
+                        <li><a href="#">Wind Speed</a></li>
+                      </ul>
+                    </li>
+                    <li><a href="#">Comparisons</a></li>
+                    <li><a href="#">Legit Data</a></li>
                   </ul>
-            </div>
-    </nav>
+                </div>
+              </nav>
 
     <h1>How does weather change with latitude and longitude? </h1>
         <br>
