added graph, played around with connecting pages

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -32,7 +32,7 @@
                     <li class="active"><a href="#">Home</a></li>
                     <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Visualizations <span class="caret"></span></a>
                       <ul class="dropdown-menu">
-                        <li><a href="#">Max Temperature</a></li>
+                        <li><a href="Temp.html">Max Temperature</a></li>
                         <li><a href="#">Humidity</a></li>
                         <li><a href="#">Wind Speed</a></li>
                       </ul>
@@ -42,21 +42,23 @@
                   </ul>
                 </div>
               </nav>
+    <div class="container">
 
-    <h1>How does weather change with latitude and longitude? </h1>
-        <br>
-    <p id=lighter>
+        <h1>How does weather change with latitude and longitude? </h1>
+            <br>
+         <p id=lighter>
         The purpose of this website is to analyze how weather changes as it approaches the equator. 
         To accomplish this analysis, we pulled data from an OpenWeatherMap API to assemble a dataset of over 500 cities. 
-       <br> <br>
+             <br> <br>
         After assembling the dataset, we used matplotlib to plot how various attributes of weather change with latitude, 
         such as temperature, cloudiness, and humidity. This site provides the source data and visualizations created as part of an analysis, 
         as well as attempts to explain correlations and describe trends in the visualization. 
-        <br>
+             <br>
    
-    <p id=tree>
+         <p id=tree>
         Please check the links above to see our different visuals and explore our site
-    </p>   
+        </p>   
+    </div>
 </body>
 
 </html>
