added more html files to have different pages

--- a/Humidity.html
+++ b/Humidity.html
@@ -21,33 +21,35 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </head>
 <body>
-    <!--Forming navigation bar again-->
+
+    <!-- Creating the Navigation Bar-->
     <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <div class="navbar-header">
+            <div class="container-fluid">
+              <div class="navbar-header">
                 <a class="navbar-brand" href="INDEX.HTML">Latitude & Weather</a>
-                </div>
-                  <ul class="nav navbar-nav">
-                        <li class="active"><a href="INDEX.HTML">Home</a></li>
-                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Visualizations <span class="caret"></span></a>
-                          <ul class="dropdown-menu">
-                            <li><a href="Temp.html">Max Temperature</a></li>
-                            <li><a href="Humidity.html">Humidity</a></li>
-                            <li><a href="Wind.html">Wind Speed</a></li>
-                          </ul>
-                        </li>
-                        <li><a href="Comparisons.html">Comparisons</a></li>
-                        <li><a href="LegitData.html">Legit Data</a></li>
+              </div>
+              <ul class="nav navbar-nav">
+                    <li class="active"><a href="INDEX.HTML">Home</a></li>
+                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Visualizations <span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        <li><a href="Temp.html">Max Temperature</a></li>
+                        <li><a href="Humidity.html">Humidity</a></li>
+                        <li><a href="Wind.html">Wind Speed</a></li>
                       </ul>
-                    </div>
-                  </nav>
+                    </li>
+                    <li><a href="Comparisons.html">Comparisons</a></li>
+                    <li><a href="LegitData.html">Legit Data</a></li>
+                  </ul>
+                </div>
+              </nav>
+
 <!-- Adding graph-->
-<h1> This is the graph for Temperature</h1>
+<h1> This is the graph for Humidity</h1>
 <div class="container">
     <div class="row">
             <div class="col-sm-4"></div>
                 <div id="images">
-                    <a href="temp.html"><img src="tempchart.gif" alt="Latitude vs. Max Temperature" class="imageNav-photo active"></a>
+                    <a href="Humidity.html"><img src="workinprogress.jpg" alt="work in progress" class="imageNav-photo active"></a>
                 </div>
             </div>
     </div>
