--- a/LegitData.html
+++ b/LegitData.html
@@ -44,21 +44,4 @@
               </nav>
     <div class="container">
 
-        <h1>How does weather change with latitude and longitude? </h1>
-            <br>
-         <p id=lighter>
-        The purpose of this website is to analyze how weather changes as it approaches the equator. 
-        To accomplish this analysis, we pulled data from an OpenWeatherMap API to assemble a dataset of over 500 cities. 
-             <br> <br>
-        After assembling the dataset, we used matplotlib to plot how various attributes of weather change with latitude, 
-        such as temperature, cloudiness, and humidity. This site provides the source data and visualizations created as part of an analysis, 
-        as well as attempts to explain correlations and describe trends in the visualization. 
-             <br>
-   
-         <p id=tree>
-        Please check the links above to see our different visuals and explore our site
-        </p>   
-    </div>
-</body>
-
-</html>
+    <h1> Under Construction, Danger Zone </h1>
